# Custom_Arm

./: README.md  README.txt
custom_kortex_control/: CMakeLists.txt  package.xml
custom_kortex_control/grippers/custom_gripper/config/: gripper_action_controller_parameters.yaml
custom_kortex_description/: CMakeLists.txt  package.xml
custom_kortex_description/arms/gen3/urdf/: gen3_macro.xacro
custom_kortex_description/grippers/custom_gripper/urdf/: custom_gripper_macro.xacro
custom_kortex_description/robots/: gen3_custom_gripper.xacro  kortex_robot.xacro  mobile_kortex_robot.xacro
custom_kortex_gazebo/: CMakeLists.txt  package.xml
custom_kortex_gazebo/launch/: spawn_custom_robot.launch  spawn_mobile_robot.launch
mbzirc_move_it_config/: .setup_assistant  CMakeLists.txt  package.xml
mbzirc_move_it_config/config/: fake_controllers.yaml  gen3_custom_gripper.srdf  ompl_planning.yaml  ros_controllers.yaml
mbzirc_move_it_config/custom_kortex_description/grippers/custom_gripper/urdf/: custom_gripper_macro.xacro  custom_gripper_transmission_macro.xacro
mbzirc_move_it_config/custom_kortex_description/robots/: gen3.xacro  gen3_custom_gripper.xacro  jackal.urdf.xacro  kortex_on_jackal.xacro  kortex_robot.xacro  mobile_kortex_robot.xacro
mbzirc_move_it_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gen3_custom_gripper_moveit_controller_manager.launch.xml  move_group.launch  move_robot.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  spawn_custom_robot.launch  start_attach_object_server.launch  trajectory_execution.launch.xml  warehouse.launch
mbzirc_move_it_config/src/: add_obstacle.cpp  attached_service_server.cpp  packaging.cpp  vertical.cpp
mbzirc_move_it_config/srv/: SetAttachedObject.srv
